--- a/index.html
+++ b/index.html
@@ -10,6 +10,37 @@
 
 <body>
 
+    <header>
+
+        <img src="img/heman.jpg" alt="He-man">
+        <h1>Big brother is watching you</h1>
+
+    </header>
+
+    <main>
+
+        <h1>Les projets du groupe HE-MAN</h1>
+
+        <h2>Voici 8 projet que nous avons réaliser lors de notre formation avec l'AFPA Territoire digital </h2>
+
+        <div class="project-1"></div>
+        <div class="project-2"></div>
+        <div class="project-3"></div>
+        <div class="project-4"></div>
+        <div class="project-5"></div>
+        <div class="project-6"></div>
+        <div class="project-7"></div>
+        <div class="project-8"></div>
+
+    </main>
+
+    <footer>
+        <h2>Membres du groupe:</h2>
+        <p>Virginie MORIN</p>
+        <p>Loïc FENNER</p>
+        <p>Wolfgang TATSCHL</p>
+        <p>Tommy BOUBAKER</p>
+    </footer>
 </body>
 
 </html>
