--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <h1>Les projets du groupe HE-MAN</h1>
 
-        <h2>Voici 8 projet que nous avons réaliser lors de notre formation avec l'AFPA Territoire digital </h2>
+        <h2>Voici 8 projets que nous avons réalisé lors de notre formation avec l'AFPA Territoire digital.</h2>
 
         <div class="project-1"></div>
         <div class="project-2"></div>
