--- a/index.html
+++ b/index.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shi-Fu-Mi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-    <header>
+    <h1>Choisis vite mais choisis bien</h1>
 
-        <img src="img/heman.jpg" alt="He-man">
-        <h1>Big brother is watching you</h1>
+    <div class="container">
+        <div class="pierre">
+            <img src="img/pierre.webp" alt="Pierre" id="pierre">
+        </div>
+        <div class="feuille">
+            <img src="img/feuille.webp" alt="Feuille" id="feuille">
+        </div>
+        <div class="ciseaux">
+            <img src="img/ciseaux.webp" alt="ciseaux" id="ciseaux">
+        </div>
+    </div>
+    
+    <div id="retour1" class="retour"></div>
 
-    </header>
+    <div id="retour2" class="retour"></div>
 
-    <main>
+    <div id="retour3" class="retour"></div>
 
-        <h1>Les projets du groupe HE-MAN</h1>
+    <div id="retour4" class="retour"></div>
 
-        <h2>Voici 8 projets que nous avons réalisé lors de notre formation avec l'AFPA Territoire digital.</h2>
+    <button>Nouvelle Partie</button>
 
-        <div class="project-1"></div>
-        <div class="project-2"></div>
-        <div class="project-3"></div>
-        <div class="project-4"></div>
-        <div class="project-5"></div>
-        <div class="project-6"></div>
-        <div class="project-7"></div>
-        <div class="project-8"></div>
+    <script src="script.js"></script>
 
-    </main>
-
-    <footer>
-        <h2>Membres du groupe:</h2>
-        <p>Virginie MORIN</p>
-        <p>Loïc FENNER</p>
-        <p>Wolfgang TATSCHL</p>
-        <p>Tommy BOUBAKER</p>
-    </footer>
 </body>
 
 </html>
