--- a/index.html
+++ b/index.html
@@ -31,15 +31,84 @@
 
             <h3>Technologies utilisées :</h3>
             <p>HTML - CSS - SASS</p>
+            
         </div>
 
-        <div class="project-2"></div>
-        <div class="project-3"></div>
-        <div class="project-4"></div>
-        <div class="project-5"></div>
-        <div class="project-6"></div>
-        <div class="project-7"></div>
-        <div class="project-8"></div>
+        <div class="project-2">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-3">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-4">
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-5">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-6">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-7">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
+
+        <div class="project-8">
+
+            <h2></h2>
+            <h3></h3>
+            <p></p>
+            <a href=""></a>
+            <h3></h3>
+            <p></p>
+
+        </div>
 
     </main>
 
