ajout de placeholder text dans les balises des projets

--- a/index.html
+++ b/index.html
@@ -31,82 +31,82 @@
 
             <h3>Technologies utilisées :</h3>
             <p>HTML - CSS - SASS</p>
-            
+
         </div>
 
         <div class="project-2">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°2</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-3">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°3</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-4">
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°4</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-5">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°5</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-6">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°6</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-7">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°7</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
         <div class="project-8">
 
-            <h2></h2>
-            <h3></h3>
-            <p></p>
-            <a href=""></a>
-            <h3></h3>
-            <p></p>
+            <h2>Projet N°8</h2>
+            <h3>Titre</h3>
+            <p>Description</p>
+            <a href="">Lien</a>
+            <h3>Technologies utilisées :</h3>
+            <p>Techno</p>
 
         </div>
 
