Ajout de descriptif, titre, lien vers projet 2

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
         <div class="project-2">
 
             <h2>Projet N°2</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
+            <h3>User validation form</h3>
+            <p>La validation des données sur le front-end allège la charge de travail du serveur tout en offrant une bonne expérience à l'utilisateur. Voici un exemple de formulaire de validation qui permet d'atteindre cet objectif.</p>
+            <a href="./Formulaire-de-validation/index.html">Lien</a>
             <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
+            <p>HTML - CSS - JavaScript</p>
 
         </div>
 
