--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <div class="project-2">
 
             <h2>Projet N°2</h2>
-            <h3>User validation form</h3>
+            <h3>Formulaire de validation</h3>
             <p>La validation des données sur le front-end allège la charge de travail du serveur tout en offrant une bonne expérience à l'utilisateur. Voici un exemple de formulaire de validation qui permet d'atteindre cet objectif.</p>
-            <a href="./Formulaire-de-validation/index.html">Lien</a>
+            <a href="./Formulaire-de-validation/index.html">Formulaire de validation</a>
             <h3>Technologies utilisées :</h3>
             <p>HTML - CSS - JavaScript</p>
 
