Ajout de descriptif, titre, lien vers projet 3

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
         <div class="project-3">
 
             <h2>Projet N°3</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
+            <h3>Agence Lorem</h3>
+            <p>Un site web d'agence responsive, à page unique, avec des liens internes depuis l'en-tête et un menu burger. Des effets ont été ajoutés aux boutons et un effet de parallaxe lors du défilement pour rendre la page plus dynamique et améliorer l'expérience de l'utilisateur.</p>
+            <a href="./Template 2/index.html">Agence Lorem's Homepage</a>
             <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
+            <p>HTML - CSS - Bootstrap</p>
 
         </div>
 
