--- a/index.html
+++ b/index.html
@@ -23,91 +23,71 @@
 
         <h2>Voici 8 projets que nous avons réalisé lors de notre formation avec l'AFPA Territoire digital.</h2>
 
-        <div class="project-1">
-            <h2>Projet N°1</h2>
-            <h3>Text-neon loading</h3>
-            <p>Dans cet exercice, nous avons du réaliser une page de chargement stylisée avec un effet neon.</p>
-            <a href="text-neon sass/index.html">Lien vers l'exercice</a>
-
-            <h3>Technologies utilisées :</h3>
-            <p>HTML - CSS - SASS</p>
-
-        </div>
-
-        <div class="project-2">
-
-            <h2>Projet N°2</h2>
-            <h3>Formulaire de validation</h3>
-            <p>La validation des données sur le front-end allège la charge de travail du serveur tout en offrant une bonne expérience à l'utilisateur. Voici un exemple de formulaire de validation qui permet d'atteindre cet objectif.</p>
-            <a href="./Formulaire-de-validation/index.html">Formulaire de validation</a>
-            <h3>Technologies utilisées :</h3>
-            <p>HTML - CSS - JavaScript</p>
-
-        </div>
-
-        <div class="project-3">
-
-            <h2>Projet N°3</h2>
-            <h3>Agence Lorem</h3>
-            <p>Un site web d'agence responsive, à page unique, avec des liens internes depuis l'en-tête et un menu burger. Des effets ont été ajoutés aux boutons et un effet de parallaxe lors du défilement pour rendre la page plus dynamique et améliorer l'expérience de l'utilisateur.</p>
-            <a href="./Template 2/index.html">Agence Lorem's Homepage</a>
-            <h3>Technologies utilisées :</h3>
-            <p>HTML - CSS - Bootstrap</p>
-
-        </div>
-
-        <div class="project-4">
-            <h2>Projet N°4</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
-            <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
-
-        </div>
-
-        <div class="project-5">
-
-            <h2>Projet N°5</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
-            <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
-
-        </div>
-
-        <div class="project-6">
-
-            <h2>Projet N°6</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
-            <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
-
-        </div>
-
-        <div class="project-7">
-
-            <h2>Projet N°7</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
-            <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
-
-        </div>
-
-        <div class="project-8">
-
-            <h2>Projet N°8</h2>
-            <h3>Titre</h3>
-            <p>Description</p>
-            <a href="">Lien</a>
-            <h3>Technologies utilisées :</h3>
-            <p>Techno</p>
-
+        <div class="projects-container">
+            <div class="project project-1">
+                <h2>Projet N°1</h2>
+                <h3 class="project-title">Text-neon loading</h3>
+                <p>Dans cet exercice, nous avons du réaliser une page de chargement stylisée avec un effet neon.</p>
+                <a href="text-neon sass/index.html">Lien vers l'exercice</a>
+                <h3>Technologies utilisées :</h3>
+                <p>HTML - CSS - SASS</p>
+            </div>
+            <div class="project project-2">
+                <h2>Projet N°2</h2>
+                <h3 class="project-title">Formulaire de validation</h3>
+                <p>La validation des données sur le front-end allège la charge de travail du serveur tout en offrant une bonne expérience à l'utilisateur. Voici un exemple de formulaire de validation qui permet d'atteindre cet objectif.</p>
+                <a href="./Formulaire-de-validation/index.html">Formulaire de validation</a>
+                <h3>Technologies utilisées :</h3>
+                <p>HTML - CSS - JavaScript</p>
+            </div>
+            <div class="project project-3">
+                <h2>Projet N°3</h2>
+                <h3 class="project-title">Agence Lorem</h3>
+                <p>Un site web d'agence responsive, à page unique, avec des liens internes depuis l'en-tête et un menu burger. Des effets ont été ajoutés aux boutons et un effet de parallaxe lors du défilement pour rendre la page plus dynamique et améliorer l'expérience de l'utilisateur.</p>
+                <a href="./Template 2/index.html">Agence Lorem's Homepage</a>
+                <h3>Technologies utilisées :</h3>
+                <p>HTML - CSS - Bootstrap</p>
+            </div>
+            <div class="project project-4">
+                <h2>Projet N°4</h2>
+                <h3 class="project-title">Titre</h3>
+                <p>Description</p>
+                <a href="">Lien</a>
+                <h3>Technologies utilisées :</h3>
+                <p>Techno</p>
+            </div>
+            <div class="project project-5">
+                <h2>Projet N°5</h2>
+                <h3 class="project-title">Titre</h3>
+                <p>Description</p>
+                <a href="">Lien</a>
+                <h3>Technologies utilisées :</h3>
+                <p>Techno</p>
+            </div>
+            <div class="project project-6">
+                <h2>Projet N°6</h2>
+                <h3 class="project-title">Titre</h3>
+                <p>Description</p>
+                <a href="">Lien</a>
+                <h3>Technologies utilisées :</h3>
+                <p>Techno</p>
+            </div>
+            <div class="project project-7">
+                <h2>Projet N°7</h2>
+                <h3 class="project-title">Titre</h3>
+                <p>Description</p>
+                <a href="">Lien</a>
+                <h3>Technologies utilisées :</h3>
+                <p>Techno</p>
+            </div>
+            <div class="project project-8">
+                <h2>Projet N°8</h2>
+                <h3 class="project-title">Titre</h3>
+                <p>Description</p>
+                <a href="">Lien</a>
+                <h3>Technologies utilisées :</h3>
+                <p>Techno</p>
+            </div>
         </div>
 
     </main>
