--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
             <div class="project project-4">
                 <h2>Projet N°4</h2>
-                <h3 class="project-title">Shi-Fu-Mi</h3>
+                <h3 class="project-title">Shi-Fu-Mi modifié</h3>
                 <p>Description</p>
                 <a href="">Lien</a>
                 <h3>Technologies utilisées :</h3>
