--- a/index.html
+++ b/index.html
@@ -51,18 +51,18 @@
             <div class="project project-4">
                 <h2>Projet N°4</h2>
                 <h3 class="project-title">Shi-Fu-Mi</h3>
-                <p>Description</p>
-                <a href="">Lien</a>
+                <p>Feuille, Pierre, Ciseaux... Choisissez vite!; Petit jeu d'enfance!</p>
+                <a href="./Shi-Fu-Mi/index.html">Shi-Fu-Mi</a>
                 <h3>Technologies utilisées :</h3>
-                <p>Techno</p>
+                <p>HTML - CSS - JS</p>
             </div>
             <div class="project project-5">
                 <h2>Projet N°5</h2>
-                <h3 class="project-title">Titre</h3>
-                <p>Description</p>
-                <a href="">Lien</a>
+                <h3 class="project-title">Web Hosting Company</h3>
+                <p>Site web responsive à page unique avec liens interne depuis la navbar. 1 effet parralaxe</p>
+                <a href="./Template 1/index.html">Web Hosting</a>
                 <h3>Technologies utilisées :</h3>
-                <p>Techno</p>
+                <p>HTML - Bootsrap - CSS</p>
             </div>
             <div class="project project-6">
                 <h2>Projet N°6</h2>
