ajout de l'exercice dé en 3D

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             </div>
             <div class="project project-6">
                 <h2>Projet N°6</h2>
-                <h3 class="project-title">Titre</h3>
-                <p>Description</p>
-                <a href="">Lien</a>
+                <h3 class="project-title">Dé 3D</h3>
+                <p>Nous avons réalisé une animation d'un dé en 3D en utilisant CSS</p>
+                <a href="CSS 3D dice/index.html">Lien vers l'animation</a>
                 <h3>Technologies utilisées :</h3>
-                <p>Techno</p>
+                <p>HTML - CSS</p>
             </div>
             <div class="project project-7">
                 <h2>Projet N°7</h2>
